--- a/data/04-source.mdx
+++ b/data/04-source.mdx
@@ -1,4 +1,6 @@
 ---
+title: Korean Barbecue Beef | Pork Schnitzel | Bahn Mi Meatball Skewers
+date: April 22nd, 2021
 recipes:
   - monday:
       title: Chipotle Cream Skillet Chicken
@@ -32,7 +34,6 @@ recipes:
       link: https://www.nomoretogo.com/weekly-menu/
 ---
 
-
 # Korean Barbecue Beef | Pork Schnitzel | Bahn Mi Meatball Skewers
 
 
@@ -46,81 +47,61 @@ Stacey, Sloane, and the No More To-Go Team
 
 
 
-
-      
 [](https://www.nomoretogo.com/weekly-menu/)
 
 [](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe1.jpeg)
-
-
+      
 ## Chipotle Cream Skillet Chicken
 ### over Rice and Snap Peas
-
-
----
-
-
-
-
+      
 
 []()  
-[](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe2.jpeg)
-https://www.nomoretogo.com/weekly-menu/   
-
+[]()
+https://www.nomoretogo.com/weekly-menu/
+https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe2.jpeg
+      
 ## Pork Schnitzel
 ### with German Spaetzle and Green Beans
 
----
-
-
-
 []()
-[](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe3.jpeg)
+[](    https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe3.jpeg)
 https://www.nomoretogo.com/weekly-menu/
 
 
 ## Bahn Mi Meatball Skewers
-
-
----
+   
     
-  
 []()
 [](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe4.jpeg)
 
 https://www.nomoretogo.com/weekly-menu/
+  
       
 ## Korean Barbecue Beef with Sesame Rice Noodles
 ### and Spicy Pickled Cucumbers and Carrots
-
-
-
----
-
-   
-[](https://www.nomoretogo.com/weekly-menu/)
+    
+[]()
 [](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe5.jpeg)
 
-  
+https://www.nomoretogo.com/weekly-menu/
+     
       
 ## Grilled Salmon with Chipotle Cream Sauce
 ### over Potato Poblano Hash and Broccolini
 
-
-
-
-
-    
-[](https://www.nomoretogo.com/weekly-menu/)
+[]()
 [](https://raw.githubusercontent.com/LLazyEmail/nomoretogo_email_template/main/data/images/recipe6.jpeg)
 
+
+https://www.nomoretogo.com/weekly-menu/
       
       
 ## Saucy Grilled Shrimp      
 ### and a Corn and Radish Salad with Avocado Dressing
 
+    
 
----
+
 
 
 ### Ingredients
